# biasx

./: .coveragerc  .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  app.py  d  experiment.md  gradio_app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html
api/analyzer/: index.html
api/calculators/: index.html
api/datasets/: index.html
api/explainers/: index.html
api/models/: index.html
api/types/: index.html
api/utils/: index.html
app/: app.py  graphs.py  utils.py
app/assets/: chart_descriptions.yaml
app/sections/: config.py  home.py  results.py  upload.py
app/visualizations/: feature_analysis.py  image_analysis.py  model_performance.py
biasx/: __init__.py  analyzer.py  calculators.py  config.py  datasets.py  defaults.py  explainers.py  models.py  options.py  types.py  utils.py
biasx/data/: dataset_config.json  landmark_mapping.json  landmarker_config.json
configuration/: index.html
cookbook/: activation_map.ipynb  activation_mapping.ipynb  biasx_framework.ipynb  cam_granularity_factors.ipynb  charts.py  facial_landmarking.py  framework.py  optimal_pipeline.py  pipelines.ipynb  sample_usage.ipynb  training_pipelines.ipynb
docs/: configuration.md  getting_started.md  index.md  installation.md
docs/api/: analyzer.md  calculators.md  datasets.md  explainers.md  models.md  types.md  utils.md
docs/javascript/: toggle.js
docs/stylesheets/: extra.css
examples/: framework.ipynb  sample_usage.ipynb  train.ipynb
experiment/: __init__.py  analyzer.py  classifier.py  config.py  dataset.py  datatypes.py  explainer.py  feature_masking.ipynb  gender_distribution.ipynb  landmark_map.json  masker.py  model.py  runner.py  schema.json  single_experiment.ipynb  usage.ipynb  usage.py  utils.py  visualizations.ipynb  visualize_exp.ipynb
experiment/results/: feature_mask.json  gender_ratio.json
frontend/: app.py  graphs.py  utils.py
getting_started/: index.html
installation/: index.html
notebooks/: framework.ipynb
search/: search_index.json
streamlit-app/: app.py  graphs.py  utils.py
tests/: conftest.py  readme-tests.md  test-requirements.txt  test_analyzer.py  test_config.py  test_dataset.py  test_explainer_visualization.py  test_explainers.py  test_infrastructure.py  test_model.py  test_types.py  test_utils.py  todo.md
tests/integration/: test_dataset_model.py  test_end_to_end.py  test_explainer_calculator.py  test_model_explainer.py
tests/system-level/: test_error_handling.py  test_output_validation.py  test_performance.py  test_system_configuration.py  test_system_end_to_end.py
tests/unit/: test_calculator.py  test_dataset.py  test_utils.py
trainer/: __init__.py  dataset_manipulator.py  model_trainer.py  utils.py
